# P1

./: .gitignore  .gitmodules  readme.md
allocator/: CMakeLists.txt
allocator/cmake/: mtest.cmake
allocator/mtest/cmake/: mtestConfig.cmake
allocator/src/: CMakeLists.txt  assignLot.c  assignLot.h  data.csv  export.pexport  main.c  parkingLot.c  parkingLot.h  parkingLotData.c  simulation1.csv
allocator/src/Testing/: CMakeLists.txt  testassignLot.c
allocator/testing/: CMakeLists.txt  testing.c
backend/: CMakeLists.txt
backend/mtest/cmake/: mtestDiscoverTests.cmake
backend/src/: CMakeLists.txt  assignLot.c  assignLot.h  cars.csv  export.pexport  main.c  parkingLot.c  parkingLot.h  parkingLotData.c  simulation1.csv  simulation1.pexport
backend/src/Testing/: CMakeLists.txt  testassignLot.c  testassignLot.h
backend/testing/: CMakeLists.txt
frontend/: CMakeLists.txt  style.rgs  vcpkg.json
frontend/src/: CMakeLists.txt  definitions.h  main.c
frontend/src/camera/: CMakeLists.txt  camera.c  camera.h
frontend/src/car/: CMakeLists.txt  car.h
frontend/src/export/: CMakeLists.txt  export.h
frontend/src/parking-lot/: CMakeLists.txt  parking-lot.c  parking-lot.h
frontend/src/parking-spot/: CMakeLists.txt  parking-spot.c  parking-spot.h
frontend/src/project/: CMakeLists.txt  project.c  project.h
frontend/src/save-load/: CMakeLists.txt
frontend/src/selection/: selection.c  selection.h
frontend/src/utils/: CMakeLists.txt  utils.c  utils.h
frontend/testing/: CMakeLists.txt  testing.c
manager/: CMakeLists.txt  icons.rgi  vcpkg.json
manager/src/project/: CMakeLists.txt  project.c
manager/src/selection/: CMakeLists.txt
manager/src/utils/: utils.c
manager/testing/: CMakeLists.txt
